[gd_scene format=3 uid="uid://xpi130jvdfmg"]

[ext_resource type="AudioStream" uid="uid://ruhocd0rlngv" path="res://assets/music/alienation_party_pads_16.wav" id="1_05ggv"]
[ext_resource type="Script" uid="uid://cto57ek0gwkg4" path="res://scenes/music_player.gd" id="1_b4vsj"]
[ext_resource type="AudioStream" uid="uid://bnbc0dlegacvg" path="res://assets/music/alienation_party_drums_16.wav" id="2_ejojg"]
[ext_resource type="AudioStream" uid="uid://cp8026cws8b3e" path="res://assets/music/alienation_party_bass_16.wav" id="3_wia2r"]
[ext_resource type="AudioStream" uid="uid://bsl8fty736mgu" path="res://assets/music/alienation_party_arp_16.wav" id="4_mobtd"]
[ext_resource type="AudioStream" uid="uid://b7vsx4ax4hqcd" path="res://assets/music/alienation_interact_topper_16.wav" id="5_154te"]
[ext_resource type="AudioStream" uid="uid://bqursr6nhqg7j" path="res://assets/music/alienation_interact_bass_16.wav" id="6_b4vsj"]
[ext_resource type="AudioStream" uid="uid://bo8nankitdmrg" path="res://assets/music/alienation_interact_bass2_16.wav" id="7_inoir"]
[ext_resource type="AudioStream" uid="uid://ddvrssavyrpvu" path="res://assets/music/alienation_interact_wawa_16.wav" id="8_b6yqm"]
[ext_resource type="AudioStream" uid="uid://fo83o5avq0nk" path="res://assets/music/alienation_interact_kick_16.wav" id="9_h42cm"]
[ext_resource type="AudioStream" uid="uid://dbletrlmy0gyv" path="res://assets/music/alienation_interact_beat_16.wav" id="10_p7e6x"]
[ext_resource type="AudioStream" uid="uid://dcmof4v4bh0dc" path="res://assets/music/alienation_interact_vox_16.wav" id="11_y3f4e"]
[ext_resource type="AudioStream" uid="uid://cjmhe2guxjaga" path="res://assets/music/alienation_interact_fx_16.wav" id="12_ehdtx"]

[node name="MusicPlayer" type="Node" unique_id=1673252323]
script = ExtResource("1_b4vsj")

[node name="Interact" type="Node" parent="." unique_id=761588545]

[node name="PartyPads" type="AudioStreamPlayer" parent="Interact" unique_id=1425794672]
stream = ExtResource("1_05ggv")
autoplay = true
bus = &"Music"

[node name="PartyDrums" type="AudioStreamPlayer" parent="Interact" unique_id=1156225991]
stream = ExtResource("2_ejojg")
autoplay = true
bus = &"Music"

[node name="PartyBass" type="AudioStreamPlayer" parent="Interact" unique_id=439770358]
stream = ExtResource("3_wia2r")
autoplay = true
bus = &"Music"

[node name="PartyARP" type="AudioStreamPlayer" parent="Interact" unique_id=379889924]
stream = ExtResource("4_mobtd")
autoplay = true
bus = &"Music"

[node name="Party" type="Node" parent="." unique_id=113680411]

[node name="Topper" type="AudioStreamPlayer" parent="Party" unique_id=2094453154]
stream = ExtResource("5_154te")
bus = &"Music"

[node name="Bass" type="AudioStreamPlayer" parent="Party" unique_id=1951430830]
stream = ExtResource("6_b4vsj")
bus = &"Music"

[node name="Bass2" type="AudioStreamPlayer" parent="Party" unique_id=1625919854]
stream = ExtResource("7_inoir")
bus = &"Music"

[node name="Wawa" type="AudioStreamPlayer" parent="Party" unique_id=920320599]
stream = ExtResource("8_b6yqm")
bus = &"Music"

[node name="Kick" type="AudioStreamPlayer" parent="Party" unique_id=312905751]
stream = ExtResource("9_h42cm")
bus = &"Music"

[node name="Beat" type="AudioStreamPlayer" parent="Party" unique_id=981851212]
stream = ExtResource("10_p7e6x")
bus = &"Music"

[node name="Vox" type="AudioStreamPlayer" parent="Party" unique_id=823153203]
stream = ExtResource("11_y3f4e")
bus = &"Music"

[node name="FX" type="AudioStreamPlayer" parent="Party" unique_id=457514312]
stream = ExtResource("12_ehdtx")
bus = &"Music"
