extends Node

@onready var party_pads: AudioStreamPlayer = $Interact/PartyPads
@onready var party_drums: AudioStreamPlayer = $Interact/PartyDrums
@onready var party_bass: AudioStreamPlayer = $Interact/PartyBass
@onready var party_arp: AudioStreamPlayer = $Interact/PartyARP

@onready var topper: AudioStreamPlayer = $Party/Topper
@onready var bass: AudioStreamPlayer = $Party/Bass
@onready var bass_2: AudioStreamPlayer = $Party/Bass2
@onready var wawa: AudioStreamPlayer = $Party/Wawa
@onready var kick: AudioStreamPlayer = $Party/Kick
@onready var beat: AudioStreamPlayer = $Party/Beat
@onready var vox: AudioStreamPlayer = $Party/Vox
@onready var fx: AudioStreamPlayer = $Party/FX
